5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1671_1872.log
== SUBMITION (2019-04-29 12:32:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if(x==0) and (y==0):
	print("Origem")
elif(x>0) and (y>0):
	print("Q1")
elif(x<0) and (y>0):
	print("Q2")
elif(x<0) and (y<0):
	print("Q3")
elif(x>0) and (y<0):
	print9"Q4"
	
-- EXECUTION TIME:
0.162785
-- ERROR:
  File "/home/codebench/codes/1671/1872/main.py", line 13
    print9"Q4"
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:32:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if(x==0) and (y==0):
	print("Origem")
elif(x>0) and (y>0):
	print("Q1")
elif(x<0) and (y>0):
	print("Q2")
elif(x<0) and (y<0):
	print("Q3")
elif(x>0) and (y<0):
	print("Q4")
	
-- EXECUTION TIME:
0.145307
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:47:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x=float(input("x"))
y=float(input("y"))
if(x==0) and (y==0):
	print("Origem")
elif(x>0) and (y>0):
	print("Q1")
elif(x<0) and (y>0):
	print("Q2")
elif(x<0) and (y<0):
	print("Q3")
elif(x>0) and (y<0):
	print("Q4")
elif(y==0):
	if(x>0) or (y<0):
		print("Eixo X")
elif(x==0):
	if(x<0) or (y<0):
		print("Eixo Y")

	
	
-- EXECUTION TIME:
0.176534
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
